# OpenJij

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  dev-requirements.in  output  pyproject.toml  setup.cfg  setup.py
.github/workflows/: buid-doc.yml  build_and_upload.yaml  ci-test-cpp.yml  ci-test-python.yaml  pages.yml  python-build-test.yml  test_macos_universal2.yaml
benchmark/: benchmark.py
docs/: doc_build.sh
docs/en/: _config.yml  _toc.yml
docs/ja/: _config.yml  _toc.yml  intro.md
docs/ja/tutorial/: 003-IntegerOptimization.ipynb  004-Evaluation.ipynb
docs/redirect/: intro.html  markdown-notebooks.html  markdown.html  notebooks.html
docs/redirect/tutorial/: 000-intro_optimization_and_Ising.html  001-openjij_introduction.html  002-HuboSolver.html  003-jijmodeling_openjij_tsp.html  004-Evaluation.html  005-benchmark_sparse_dense.html  006-Machine_Learning_by_QA.html  machine_learning_index.html  optimization_index.html  physics_index.html
docs/redirect/tutorial/machine_learning/: clustering.html  qboost.html
docs/redirect/tutorial/optimization/: ProteinFoldingHubo.html  ReverseQuantumAnnealing.html  clique_cover.html  graph_coloring.html  integer_jobs.html  knapsack.html  number_partition.html
docs/redirect/tutorial/physics/: ClassicalSystem.html  IntroductionCoreInterface.html  MonteCarloSampling.html  QuantumSystem.html
docs/tutorial/ja/: 001-openjij_introduction.ipynb
docs/tutorial/ja/optimization/: integer_jobs.ipynb
include/openjij/graph/: all.hpp  integer_polynomial_model.hpp  integer_quadratic_model.hpp
include/openjij/sampler/: integer_sa_sampler.hpp
include/openjij/system/: all.hpp  integer_polynomial_sa_system.hpp  integer_quadratic_sa_system.hpp
include/openjij/updater/: single_integer_move.hpp
include/openjij/utility/: min_polynomial.hpp  variable.hpp
openjij/: declare.hpp
openjij/sampler/: sa_sampler.py
tests/: CMakeLists.txt  test_advanced_features.py  test_base_sample_hubo.py  test_cxx.py  test_hubo_simple.py  test_huio.py  test_multiprocessing_defaults.py  test_parallel_local_search.py  test_quio.py  test_sample_hubo.py  test_sampler.py
tests/cxxtest/graph/: all.hpp  integer_polynomial_model.hpp  integer_quadratic_model.hpp
tests/cxxtest/sampler/: all.hpp  integer_quadratic_sa_sampler.hpp
